--- a/omarchy-waybar/config.jsonc
+++ b/omarchy-waybar/config.jsonc
@@ -75,8 +75,8 @@
     "on-click": "alacritty -e btop"
   },
   "clock": {
-    "format": "{:%A %H:%M}",
-    "format-alt": "{:%d %B W%V %Y}",
+    "format": "{:%a %d %b %H:%M}",
+    "format-alt": "{:%a %H:%M}",
     "tooltip": false,
     "on-click-right": "omarchy-cmd-tzupdate"
   },
