autostart brave and spotify

--- a/omarchy-hypr/autostart.conf
+++ b/omarchy-hypr/autostart.conf
@@ -1,2 +1,5 @@
 # Extra autostart processes
 # exec-once = uwsm app -- my-service
+
+exec-once = [workspace 1] brave --ozone-platform=wayland
+exec-once = [workspace 5 silent] spotify
