--- a/omarchy-hypr/input.conf
+++ b/omarchy-hypr/input.conf
@@ -27,3 +27,6 @@ input {
 
 # Scroll faster in the terminal
 windowrule = scrolltouchpad 1.5, class:Alacritty
+
+windowrulev2 = workspace 1, class:^(brave-browser)$
+windowrulev2 = workspace 5, class:^(Spotify)$
