--- a/omarchy-hypr/input.conf
+++ b/omarchy-hypr/input.conf
@@ -30,3 +30,6 @@ windowrule = scrolltouchpad 1.5, class:Alacritty
 
 windowrulev2 = workspace 1, class:^(brave-browser)$
 windowrulev2 = workspace 5, class:^(Spotify)$
+windowrulev2 = opacity 1.0 1.0, class:^(org.godotengine.Editor)$
+windowrulev2 = opacity 1.0 1.0, class:^(blender)$
+
