--- a/omarchy-hypr/autostart.conf
+++ b/omarchy-hypr/autostart.conf
@@ -1,5 +1,5 @@
 # Extra autostart processes
 # exec-once = uwsm app -- my-service
 
-exec-once = [workspace 1] brave --ozone-platform=wayland
+exec-once = [workspace 1] brave --ozone-platform=wayland --password-store=basic
 exec-once = [workspace 5 silent] spotify
