--- a/omarchy-hypr/input.conf
+++ b/omarchy-hypr/input.conf
@@ -33,4 +33,4 @@ windowrulev2 = workspace 5, class:^(Spotify)$
 
 windowrulev2 = opacity 1.0 1.0, class:^(org.godotengine.Editor)$
 windowrulev2 = opacity 1.0 1.0, class:^(blender)$
-
+windowrulev2 = opacity 1.0 1.0, class:^(Aseprite)$
