restore brave sessions by default

--- a/omarchy-hypr/bindings.conf
+++ b/omarchy-hypr/bindings.conf
@@ -1,6 +1,6 @@
 # Application bindings
 $terminal = uwsm app -- alacritty
-$browser = uwsm app -- brave --new-window --ozone-platform=wayland --password-store=basic
+$browser = uwsm app -- brave --new-window --ozone-platform=wayland --password-store=basic --restore-last-session
 
 bindd = SUPER, return, Terminal, exec, $terminal --working-directory $(omarchy-cmd-terminal-cwd)
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
