dont ignore brave in mpris

--- a/omarchy-waybar/config.jsonc
+++ b/omarchy-waybar/config.jsonc
@@ -61,7 +61,7 @@
     "status-icons": {
       "paused": "⏸",
     },
-    "ignored-players": ["brave"],
+    // "ignored-players": ["brave"],
   },
   "cpu": {
     "interval": 5,
