full automated game dev setup

--- a/omarchy-hypr/input.conf
+++ b/omarchy-hypr/input.conf
@@ -34,3 +34,5 @@ windowrulev2 = workspace 5, class:^(Spotify)$
 windowrulev2 = opacity 1.0 1.0, class:^(org.godotengine.Editor)$
 windowrulev2 = opacity 1.0 1.0, class:^(blender)$
 windowrulev2 = opacity 1.0 1.0, class:^(Aseprite)$
+
+windowrulev2 = tile, class:^(Aseprite)$
