--- a/omarchy-hypr/autostart.conf
+++ b/omarchy-hypr/autostart.conf
@@ -2,4 +2,7 @@
 # exec-once = uwsm app -- my-service
 
 exec-once = [workspace 1] brave --ozone-platform=wayland --password-store=basic --restore-last-session
+exec-once = [workspace 2 silent] alacritty
+exec-once = [workspace 3 silent] godot
+exec-once = [workspace 4 silent] aseprite
 exec-once = [workspace 5 silent] spotify
