--- a/omarchy-hypr/bindings.conf
+++ b/omarchy-hypr/bindings.conf
@@ -26,3 +26,7 @@ bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-webapp "https://web.whats
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER, Space
 # bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+
+bindeld = , XF86MonBrightnessUp, Brightness up, exec, ddcutil setvcp 10 + 5
+bindeld = , XF86MonBrightnessDown, Brightness down, exec, ddcutil setvcp 10 - 5
+
