swap godot and aseprite to steam launcher and configure it

--- a/omarchy-hypr/bindings.conf
+++ b/omarchy-hypr/bindings.conf
@@ -12,6 +12,8 @@ bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
 # bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
 bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
 # bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
+bindd = SUPER, S, Aseprite, exec, uwsm app -- steam -applaunch 431730
+bindd = SUPER, G, Godot, exec, uwsm app -- steam -applaunch 404790
 
 bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 # bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
