--- a/omarchy-hypr/input.conf
+++ b/omarchy-hypr/input.conf
@@ -32,9 +32,9 @@ windowrulev2 = workspace 1, class:^(brave-browser)$
 windowrulev2 = workspace 3, class:^(org.godotengine.Editor|org.godotengine.ProjectManager)$
 windowrulev2 = workspace 4, class:^(Aseprite)$
 windowrulev2 = workspace 5, class:^(Spotify)$
-windowrulev2 = workspace 6 silent, class:^(steam)$
 
-windowrulev2 = noinitialfocus, class:^(steam)$
+windowrulev2 = workspace 6 silent, class:^(steam|steamwebhelper)$
+windowrulev2 = noinitialfocus, class:^(steam|steamwebhelper)$
 
 windowrulev2 = opacity 1.0 1.0, class:^(org.godotengine.Editor)$
 windowrulev2 = opacity 1.0 1.0, class:^(blender)$
@@ -42,3 +42,4 @@ windowrulev2 = opacity 1.0 1.0, class:^(Aseprite)$
 
 windowrulev2 = tile, class:^(Aseprite)$
 windowrulev2 = tile, class:^(steam)$
+windowrulev2 = tile, class:^(steamwebhelper)$
