--- a/omarchy-hypr/input.conf
+++ b/omarchy-hypr/input.conf
@@ -29,8 +29,8 @@ input {
 windowrule = scrolltouchpad 1.5, class:Alacritty
 
 windowrulev2 = workspace 1, class:^(brave-browser)$
-windowrulev2 = workspace 3, class:^(org.godotengine.Editor|org.godotengine.ProjectManager)$
-windowrulev2 = workspace 4, class:^(Aseprite)$
+# windowrulev2 = workspace 3, class:^(org.godotengine.Editor|org.godotengine.ProjectManager)$
+# windowrulev2 = workspace 4, class:^(Aseprite)$
 windowrulev2 = workspace 5, class:^(Spotify)$
 
 windowrulev2 = workspace 6 silent, class:^(steam|steamwebhelper)$
