--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,31 +1,16 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 format = """
-[ ](bg:red)\
+[ ](bg:yellow)\
 $os\
-$username\
-[ ](bg:red)\
-[ ](bg:peach fg:red)\
+[ ](bg:yellow)\
+[](bg:green fg:yellow)\
 $directory\
-[ ](bg:yellow fg:peach)\
+[](fg:green bg:sapphire)\
 $git_branch\
-$git_status\
-[ ](fg:yellow bg:green)\
-$c\
-$rust\
-$golang\
-$nodejs\
-$php\
-$java\
-$kotlin\
-$haskell\
-$python\
-[ ](fg:green bg:sapphire)\
-$docker_context\
-[ ](fg:sapphire bg:lavender)\
+[](fg:sapphire bg:lavender)\
 $kubernetes\
-[ ](fg:lavender)\
-$cmd_duration\
+[](fg:lavender)\
 $line_break\
 $character"""
 
@@ -33,7 +18,7 @@ palette = 'catppuccin_mocha'
 
 [os]
 disabled = false
-style = "bg:red fg:crust"
+style = "bg:yellow fg:crust"
 
 [os.symbols]
 Windows = ""
@@ -57,83 +42,21 @@ Debian = "󰣚"
 Redhat = "󱄛"
 RedHatEnterprise = "󱄛"
 
-[username]
-show_always = true
-style_user = "bg:red fg:crust"
-style_root = "bg:red fg:crust"
-format = '[ $user]($style)'
-
 [directory]
-style = "bg:peach fg:crust"
+style = "bg:green fg:crust"
 format = "[ $path ]($style)"
-truncation_length = 3
+truncation_length = 2
 truncation_symbol = "…/"
-
-[directory.substitutions]
-"Documents" = "󰈙 "
-"Downloads" = " "
-"Music" = "󰝚 "
-"Pictures" = " "
-"Repos" = "󰲋 "
+truncate_to_repo = false
 
 [git_branch]
 symbol = ""
-style = "bg:yellow"
-format = '[[ $symbol $branch ](fg:crust bg:yellow)]($style)'
+style = "bg:sapphire"
+format = '[[ $symbol $branch ](fg:crust bg:sapphire)]($style)'
 
 [git_status]
-style = "bg:yellow"
-format = '[[($all_status$ahead_behind )](fg:crust bg:yellow)]($style)'
-
-[nodejs]
-symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
-
-[c]
-symbol = " "
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
-
-[rust]
-symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
-
-[golang]
-symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
-
-[php]
-symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
-
-[java]
-symbol = " "
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
-
-[kotlin]
-symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
-
-[haskell]
-symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version) ](fg:crust bg:green)]($style)'
-
-[python]
-symbol = ""
-style = "bg:green"
-format = '[[ $symbol( $version)(\(#$virtualenv\)) ](fg:crust bg:green)]($style)'
-
-[docker_context]
-symbol = ""
 style = "bg:sapphire"
-format = '[[ $symbol( $context) ](fg:crust bg:sapphire)]($style)'
+format = '[[($all_status$ahead_behind )](fg:crust bg:sapphire)]($style)'
 
 [kubernetes]
 disabled = false
@@ -141,14 +64,8 @@ symbol = "☸ "
 style = "bg:lavender"
 format = '[[ $symbol$context( \($namespace\)) ](fg:crust bg:lavender)]($style)'
 
-[time]
-disabled = true
-time_format = "%R"
-style = "bg:lavender"
-format = '[[  $time ](fg:crust bg:lavender)]($style)'
-
 [line_break]
-disabled = true
+disabled = false
 
 [character]
 disabled = false
@@ -158,14 +75,6 @@ vimcmd_symbol = '[❮](bold fg:green)'
 vimcmd_replace_one_symbol = '[❮](bold fg:lavender)'
 vimcmd_replace_symbol = '[❮](bold fg:lavender)'
 vimcmd_visual_symbol = '[❮](bold fg:yellow)'
-
-[cmd_duration]
-show_milliseconds = true
-format = " in $duration "
-style = "bg:lavender"
-disabled = false
-show_notifications = true
-min_time_to_notify = 45000
 
 [palettes.catppuccin_mocha]
 rosewater = "#f5e0dc"
