--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -12,7 +12,8 @@ $git_branch\
 $kubernetes\
 [](fg:lavender)\
 $line_break\
-$character"""
+$character
+"""
 
 palette = 'catppuccin_mocha'
 
@@ -69,12 +70,12 @@ disabled = false
 
 [character]
 disabled = false
-success_symbol = '[❯](bold fg:green)'
-error_symbol = '[❯](bold fg:red)'
-vimcmd_symbol = '[❮](bold fg:green)'
-vimcmd_replace_one_symbol = '[❮](bold fg:lavender)'
-vimcmd_replace_symbol = '[❮](bold fg:lavender)'
-vimcmd_visual_symbol = '[❮](bold fg:yellow)'
+success_symbol = '[](bold fg:green)'
+error_symbol = '[](bold fg:red)'
+vimcmd_symbol = '[](bold fg:green)'
+vimcmd_replace_one_symbol = '[](bold fg:lavender)'
+vimcmd_replace_symbol = '[](bold fg:lavender)'
+vimcmd_visual_symbol = '[](bold fg:yellow)'
 
 [palettes.catppuccin_mocha]
 rosewater = "#f5e0dc"
