--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -3,12 +3,12 @@ $fileManager = dolphin
 $passwordManager = keepassxc
 $menu = hyprlauncher
 
-$mainMod = SUPER
+$mainMod = CTRL
 
 bind = $mainMod, W, killactive
-bind = $mainMod, T, exec, $terminal
-bind = $mainMod, F, exec, $fileManager
-bind = $mainMod, P, exec, $passwordManager
+bind = $mainMod SHIFT, T, exec, $terminal
+bind = $mainMod SHIFT, F, exec, $fileManager
+bind = $mainMod SHIFT, P, exec, $passwordManager
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod SHIFT, Q, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = $mainMod SHIFT, V, togglefloating
@@ -22,16 +22,16 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = SUPER, 1, workspace, 1
+bind = SUPER, 2, workspace, 2
+bind = SUPER, 3, workspace, 3
+bind = SUPER, 4, workspace, 4
+bind = SUPER, 5, workspace, 5
+bind = SUPER, 6, workspace, 6
+bind = SUPER, 7, workspace, 7
+bind = SUPER, 8, workspace, 8
+bind = SUPER, 9, workspace, 9
+bind = SUPER, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
