zsa and reboot to arch scripts, arch waybar

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -5,7 +5,13 @@ $menu = hyprlauncher
 
 $mainMod = CTRL
 
-bind = $mainMod, W, killactive
+bind = SUPER, W, killactive
+
+# Copy / Paste
+# bindd = CTRL, C, Universal copy, sendshortcut, CTRL, Insert,
+# bindd = CTRL, V, Universal paste, sendshortcut, SHIFT, Insert,
+# bindd = CTRL, X, Universal cut, sendshortcut, CTRL, X,
+
 bind = $mainMod SHIFT, T, exec, $terminal
 bind = $mainMod SHIFT, F, exec, $fileManager
 bind = $mainMod SHIFT, P, exec, $passwordManager
@@ -56,8 +62,8 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindel = ,XF86MonBrightnessUp, exec, asdbctl up
+bindel = ,XF86MonBrightnessDown, exec, asdbctl down
 
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
