--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -1,31 +1,33 @@
 $terminal = ghostty
 $fileManager = dolphin
+$browser = brave --password-store=basic --restore-last-session
+$editor = code
 $passwordManager = keepassxc
 $menu = hyprlauncher
 
-$mainMod = CTRL
-
-bind = SUPER, W, killactive
+bind = CTRL, Q, killactive
 
 # Copy / Paste
 # bindd = CTRL, C, Universal copy, sendshortcut, CTRL, Insert,
 # bindd = CTRL, V, Universal paste, sendshortcut, SHIFT, Insert,
 # bindd = CTRL, X, Universal cut, sendshortcut, CTRL, X,
 
-bind = $mainMod SHIFT, T, exec, $terminal
-bind = $mainMod SHIFT, F, exec, $fileManager
-bind = $mainMod SHIFT, P, exec, $passwordManager
-bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod SHIFT, Q, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
-bind = $mainMod SHIFT, V, togglefloating
-bind = $mainMod SHIFT, J, togglesplit
-bind = $mainMod SHIFT, P, pseudo
+bind = CTRL SHIFT, T, exec, $terminal
+bind = CTRL SHIFT, F, exec, $fileManager
+bind = CTRL SHIFT, B, exec, $browser
+bind = CTRL SHIFT, E, exec, $editor
+bind = CTRL SHIFT, P, exec, $passwordManager
+bind = CTRL, SPACE, exec, $menu
+bind = CTRL SHIFT, Q, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
+bind = CTRL SHIFT, V, togglefloating
+bind = CTRL SHIFT, J, togglesplit
+bind = CTRL SHIFT, P, pseudo
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = SUPER, left, movefocus, l
+bind = SUPER, right, movefocus, r
+bind = SUPER, up, movefocus, u
+bind = SUPER, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = SUPER, 1, workspace, 1
@@ -40,16 +42,16 @@ bind = SUPER, 9, workspace, 9
 bind = SUPER, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = CTRL SHIFT, 1, movetoworkspace, 1
+bind = CTRL SHIFT, 2, movetoworkspace, 2
+bind = CTRL SHIFT, 3, movetoworkspace, 3
+bind = CTRL SHIFT, 4, movetoworkspace, 4
+bind = CTRL SHIFT, 5, movetoworkspace, 5
+bind = CTRL SHIFT, 6, movetoworkspace, 6
+bind = CTRL SHIFT, 7, movetoworkspace, 7
+bind = CTRL SHIFT, 8, movetoworkspace, 8
+bind = CTRL SHIFT, 9, movetoworkspace, 9
+bind = CTRL SHIFT, 0, movetoworkspace, 10
 
 # Resize windows with keyboard
 bind = SUPER, code:20, resizeactive, -100 0    # - key (expand left)
