--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -4,7 +4,11 @@
   "position": "top",
   "spacing": 0,
   "height": 35,
-  "modules-left": ["custom/arch", "custom/separator-left", "hyprland/workspaces"],
+  "modules-left": [
+    "custom/arch",
+    "custom/separator-left",
+    "hyprland/workspaces"
+  ],
   "modules-center": ["mpris"],
   "modules-right": [
     "cpu",
@@ -17,7 +21,7 @@
 
     "temperature#cpu",
     "temperature#gpu",
-    
+
     "custom/separator-right",
     "clock"
   ],
@@ -59,7 +63,7 @@
       "5": []
     }
   },
-    "mpris": {
+  "mpris": {
     "format": "{player_icon} {dynamic}",
     "format-paused": "{status_icon} <i>{dynamic}</i>",
     "player-icons": {
@@ -152,17 +156,5 @@
       "headset": "",
       "default": ["", "", ""]
     }
-  },
-  "group/tray-expander": {
-    "orientation": "inherit",
-    "drawer": {
-      "transition-duration": 600,
-      "children-class": "tray-group-item"
-    },
-    "modules": ["custom/expand-icon", "tray"]
-  },
-  "tray": {
-    "icon-size": 12,
-    "spacing": 17
   }
 }
