--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -22,6 +22,7 @@ bind = CTRL SHIFT, Q, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutd
 bind = CTRL SHIFT, V, togglefloating
 bind = CTRL SHIFT, J, togglesplit
 bind = CTRL SHIFT, P, pseudo
+bind = CTRL SHIFT, W, exec, pkill waybar || waybar &
 
 # Move focus with mainMod + arrow keys
 bind = SUPER, left, movefocus, l
