regen-mirrors for pacman, generalized reboot script, robust paru-bootstrap script

--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -3,6 +3,7 @@ $fileManager = dolphin
 $browser = brave --password-store=basic --restore-last-session
 $editor = code
 $passwordManager = keepassxc
+$music = spotify
 $menu = hyprlauncher
 
 bind = CTRL, Q, killactive
@@ -17,6 +18,7 @@ bind = CTRL SHIFT, F, exec, $fileManager
 bind = CTRL SHIFT, B, exec, $browser
 bind = CTRL SHIFT, E, exec, $editor
 bind = CTRL SHIFT, P, exec, $passwordManager
+bind = CTRL SHIFT, S, exec, $music
 bind = CTRL, SPACE, exec, $menu
 bind = CTRL SHIFT, Q, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = CTRL SHIFT, V, togglefloating
