fix keybindings, fix bluetooth icon

--- a/ghostty/arch.conf
+++ b/ghostty/arch.conf
@@ -1,2 +1,15 @@
 font-size = 14
 gtk-titlebar-style = tabs
+
+# Keyboard bindings
+keybind = ctrl+c=copy_to_clipboard
+keybind = ctrl+v=paste_from_clipboard
+
+keybind = super+c=text:\x03
+keybind = super+d=text:\x04
+keybind = super+r=text:\x12
+keybind = super+s=text:\x13
+keybind = super+u=text:\x15
+keybind = super+w=text:\x17
+keybind = super+l=text:\x0c
+keybind = super+z=text:\x1a
