--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -8,11 +8,6 @@ $menu = hyprlauncher
 
 bind = CTRL, Q, killactive
 
-# Copy / Paste
-# bindd = CTRL, C, Universal copy, sendshortcut, CTRL, Insert,
-# bindd = CTRL, V, Universal paste, sendshortcut, SHIFT, Insert,
-# bindd = CTRL, X, Universal cut, sendshortcut, CTRL, X,
-
 bind = CTRL SHIFT, T, exec, $terminal
 bind = CTRL SHIFT, F, exec, $fileManager
 bind = CTRL SHIFT, B, exec, $browser
@@ -67,8 +62,8 @@ bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, asdbctl up
-bindel = ,XF86MonBrightnessDown, exec, asdbctl down
+bindel = ,XF86MonBrightnessUp, exec, asdbctl up -s 5
+bindel = ,XF86MonBrightnessDown, exec, asdbctl down -s 5
 
 bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
