--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -145,7 +145,7 @@
     }
   },
   "bluetooth": {
-    "format": "",
+    "format": "󰂯",
     "format-off": "󰂲",
     "format-disabled": "󰂲",
     "format-connected": "󰂱",
