use omarchy toolchain

--- a/ghostty/arch.conf
+++ b/ghostty/arch.conf
@@ -1,6 +1,8 @@
 font-size = 14
 gtk-titlebar-style = tabs
 
+config-file = ~/.config/omarchy/current/theme/ghostty.conf
+
 # Keyboard bindings
 keybind = ctrl+c=copy_to_clipboard
 keybind = ctrl+v=paste_from_clipboard
