refactor: reorganize Hyprland configuration files and update window rules

--- a/hypr/windows.conf
+++ b/hypr/windows.conf
@@ -1,30 +1,17 @@
-windowrule {
-    # Ignore maximize requests from all apps. You'll probably like this.
-    name = suppress-maximize-events
-    match:class = .*
+# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
+# Hyprland 0.53+ syntax
+windowrule = suppress_event maximize, match:class .*
 
-    suppress_event = maximize
-}
+# Tag all windows for default opacity (apps can override with -default-opacity tag)
+windowrule = tag +default-opacity, match:class .*
 
-windowrule {
-    # Fix some dragging issues with XWayland
-    name = fix-xwayland-drags
-    match:class = ^$
-    match:title = ^$
-    match:xwayland = true
-    match:float = true
-    match:fullscreen = false
-    match:pin = false
+# Fix some dragging issues with XWayland
+windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, match:float 1, match:fullscreen 0, match:pin 0
 
-    no_focus = true
-}
+# Define terminal tag to style them uniformly
+windowrule = tag +terminal, match:class (Alacritty|kitty|com.mitchellh.ghostty)
+windowrule = tag -default-opacity, match:tag terminal
+windowrule = opacity 0.97 0.9, match:tag terminal
 
-# Hyprland-run windowrule
-windowrule {
-    name = move-hyprland-run
-
-    match:class = hyprland-run
-
-    move = 20 monitor_h-120
-    float = yes
-}
+# Apply default opacity after apps have had a chance to opt out
+windowrule = opacity 0.97 0.9, match:tag default-opacity
