--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -1,1 +1,4 @@
-exec-once = waybar
+exec-once = uwsm-app -- waybar
+exec-once = uwsm-app -- mako
+exec-once = uwsm-app -- swayosd-server
+exec-once = uwsm-app -- swaybg -i ~/.config/omarchy/current/background -m fill
