--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -1,10 +1,11 @@
 $terminal = ghostty
-$fileManager = dolphin
+$fileManager = nautilus
 $browser = brave --password-store=basic --restore-last-session
 $editor = code
 $passwordManager = keepassxc
 $music = spotify
 $menu = hyprlauncher
+$osdclient = swayosd-client --monitor "$(hyprctl monitors -j | jq -r '.[] | select(.focused == true).name')"
 
 bind = CTRL, Q, killactive
 
@@ -57,15 +58,23 @@ bind = SUPER, code:21, resizeactive, 100 0     # = key (shrink left)
 bind = SUPER SHIFT, code:20, resizeactive, 0 -100  # shrink up
 bind = SUPER SHIFT, code:21, resizeactive, 0 100   # expand down
 
-# Multimedia keys for volume and brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, asdbctl up -s 5
-bindel = ,XF86MonBrightnessDown, exec, asdbctl down -s 5
+# Multimedia keys for volume and LCD brightness (with SwayOSD)
+$osdclient = swayosd-client --monitor "$(hyprctl monitors -j | jq -r '.[] | select(.focused == true).name')"
 
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
+bindeld = ,XF86AudioRaiseVolume, Volume up, exec, $osdclient --output-volume raise
+bindeld = ,XF86AudioLowerVolume, Volume down, exec, $osdclient --output-volume lower
+bindeld = ,XF86AudioMute, Mute, exec, $osdclient --output-volume mute-toggle
+bindeld = ,XF86AudioMicMute, Mute microphone, exec, $osdclient --input-volume mute-toggle
+bindeld = ,XF86MonBrightnessUp, Brightness up, exec, asdbctl up -s 5 && brightness=$(asdbctl get | awk '{print $2}') && progress=$(awk "BEGIN{printf \"%.2f\", $brightness/100}") && $osdclient --custom-icon display-brightness-symbolic --custom-progress "$progress" --custom-progress-text "${brightness}%"
+bindeld = ,XF86MonBrightnessDown, Brightness down, exec, asdbctl down -s 5 && brightness=$(asdbctl get | awk '{print $2}') && progress=$(awk "BEGIN{printf \"%.2f\", $brightness/100}") && $osdclient --custom-icon display-brightness-symbolic --custom-progress "$progress" --custom-progress-text "${brightness}%"
+
+# Precise 1% multimedia adjustments with Alt modifier
+bindeld = ALT, XF86AudioRaiseVolume, Volume up precise, exec, $osdclient --output-volume +1
+bindeld = ALT, XF86AudioLowerVolume, Volume down precise, exec, $osdclient --output-volume -1
+bindeld = ALT, XF86MonBrightnessUp, Brightness up precise, exec, asdbctl up -s 1 && brightness=$(asdbctl get | awk '{print $2}') && progress=$(awk "BEGIN{printf \"%.2f\", $brightness/100}") && $osdclient --custom-icon display-brightness-symbolic --custom-progress "$progress" --custom-progress-text "${brightness}%"
+bindeld = ALT, XF86MonBrightnessDown, Brightness down precise, exec, asdbctl down -s 1 && brightness=$(asdbctl get | awk '{print $2}') && progress=$(awk "BEGIN{printf \"%.2f\", $brightness/100}") && $osdclient --custom-icon display-brightness-symbolic --custom-progress "$progress" --custom-progress-text "${brightness}%"
+
+bindld = , XF86AudioNext, Next track, exec, $osdclient --playerctl next
+bindld = , XF86AudioPause, Pause, exec, $osdclient --playerctl play-pause
+bindld = , XF86AudioPlay, Play, exec, $osdclient --playerctl play-pause
+bindld = , XF86AudioPrev, Previous track, exec, $osdclient --playerctl previous
