--- a/brave-flags.conf
+++ b/brave-flags.conf
@@ -3,3 +3,5 @@
 --enable-features=TouchpadOverscrollHistoryNavigation
 # Chromium crash workaround for Wayland color management on Hyprland - see https://github.com/hyprwm/Hyprland/issues/11957
 --disable-features=WaylandWpColorManagerV1
+--restore-last-session
+--password-store=gnome-libsecret
