--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -15,12 +15,15 @@ bind = CTRL SHIFT, B, exec, $browser
 bind = CTRL SHIFT, E, exec, $editor
 bind = CTRL SHIFT, P, exec, $passwordManager
 bind = CTRL SHIFT, S, exec, $music
-bind = CTRL, SPACE, exec, $menu
+bind = CTRL, SPACE, exec, walker
+bind = CTRL SHIFT, SPACE, exec, omarchy-menu
 bind = CTRL SHIFT, Q, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
 bind = CTRL SHIFT, V, togglefloating
 bind = CTRL SHIFT, J, togglesplit
 bind = CTRL SHIFT, P, pseudo
 bind = CTRL SHIFT, W, exec, pkill waybar || waybar &
+bind = , Print, exec, omarchy-cmd-screenshot
+bind = SHIFT, Print, exec, omarchy-cmd-screenrecord
 
 # Move focus with mainMod + arrow keys
 bind = SUPER, left, movefocus, l
