--- a/hypr/default/envs.conf
+++ b/hypr/default/envs.conf
@@ -19,3 +19,11 @@ env = XDG_SESSION_DESKTOP,Hyprland
 xwayland {
   force_zero_scaling = true
 }
+
+# Use XCompose file
+env = XCOMPOSEFILE,~/.XCompose
+
+# Don't show update on first launch
+ecosystem {
+  no_update_news = true
+}
