enhance: update Pacmanfile, TODO, and various symlink scripts; add git config

--- a/hypr/config/bindings.conf
+++ b/hypr/config/bindings.conf
@@ -15,6 +15,48 @@ bindd = CTRL SHIFT, V, Toggle floating, togglefloating
 bindd = CTRL SHIFT, J, Toggle split, togglesplit
 bindd = CTRL SHIFT, W, Restart waybar, exec, pkill waybar || waybar &
 
+# Move focus with SUPER + arrow keys
+bindd = SUPER, left, Move focus left, movefocus, l
+bindd = SUPER, right, Move focus right, movefocus, r
+bindd = SUPER, up, Move focus up, movefocus, u
+bindd = SUPER, down, Move focus down, movefocus, d
+
+# Switch workspaces with SUPER + [1-9; 0]
+bindd = SUPER, 1, Switch to workspace 1, workspace, 1
+bindd = SUPER, 2, Switch to workspace 2, workspace, 2
+bindd = SUPER, 3, Switch to workspace 3, workspace, 3
+bindd = SUPER, 4, Switch to workspace 4, workspace, 4
+bindd = SUPER, 5, Switch to workspace 5, workspace, 5
+bindd = SUPER, 6, Switch to workspace 6, workspace, 6
+bindd = SUPER, 7, Switch to workspace 7, workspace, 7
+bindd = SUPER, 8, Switch to workspace 8, workspace, 8
+bindd = SUPER, 9, Switch to workspace 9, workspace, 9
+bindd = SUPER, 0, Switch to workspace 10, workspace, 10
+
+# Move active window to workspace with CTRL SHIFT + [1-9; 0]
+bindd = CTRL SHIFT, 1, Move to workspace 1, movetoworkspace, 1
+bindd = CTRL SHIFT, 2, Move to workspace 2, movetoworkspace, 2
+bindd = CTRL SHIFT, 3, Move to workspace 3, movetoworkspace, 3
+bindd = CTRL SHIFT, 4, Move to workspace 4, movetoworkspace, 4
+bindd = CTRL SHIFT, 5, Move to workspace 5, movetoworkspace, 5
+bindd = CTRL SHIFT, 6, Move to workspace 6, movetoworkspace, 6
+bindd = CTRL SHIFT, 7, Move to workspace 7, movetoworkspace, 7
+bindd = CTRL SHIFT, 8, Move to workspace 8, movetoworkspace, 8
+bindd = CTRL SHIFT, 9, Move to workspace 9, movetoworkspace, 9
+bindd = CTRL SHIFT, 0, Move to workspace 10, movetoworkspace, 10
+
+# Resize windows
+bindd = SUPER, code:20, Expand left, resizeactive, -100 0
+bindd = SUPER, code:21, Shrink left, resizeactive, 100 0
+bindd = SUPER SHIFT, code:20, Shrink up, resizeactive, 0 -100
+bindd = SUPER SHIFT, code:21, Expand down, resizeactive, 0 100
+
+# Cycle through windows on active workspace
+bindd = CTRL, TAB, Cycle to next window, cyclenext
+bindd = CTRL SHIFT, TAB, Cycle to prev window, cyclenext, prev
+bindd = CTRL, TAB, Reveal active window on top, bringactivetotop
+bindd = CTRL SHIFT, TAB, Reveal active window on top, bringactivetotop
+
 # Screenshots
 bindd = , Print, Screenshot, exec, omarchy-cmd-screenshot
 bindd = SHIFT, Print, Screen record, exec, omarchy-cmd-screenrecord
