--- a/hypr/config/hyprland.conf
+++ b/hypr/config/hyprland.conf
@@ -1,15 +1,9 @@
 # Learn how to configure Hyprland: https://wiki.hyprland.org/Configuring/
 
-# Use defaults Omarchy defaults (but don't edit these directly!)
-# source = ~/.local/share/omarchy/default/hypr/autostart.conf  # @custom
-# source = ~/.local/share/omarchy/default/hypr/bindings/media.conf  # @custom
-# source = ~/.local/share/omarchy/default/hypr/bindings/clipboard.conf  # @custom
-# source = ~/.local/share/omarchy/default/hypr/bindings/tiling-v2.conf  # @custom
-# source = ~/.local/share/omarchy/default/hypr/bindings/utilities.conf  # @custom
-source = ~/.config/default/hypr/envs.conf  # @custom
-source = ~/.config/default/hypr/looknfeel.conf  # @custom
-source = ~/.config/default/hypr/input.conf  # @custom
-source = ~/.config/default/hypr/windows.conf  # @custom
+# Source omarchy base configs directly
+source = ~/.local/share/omarchy/default/hypr/envs.conf
+source = ~/.local/share/omarchy/default/hypr/looknfeel.conf
+source = ~/.local/share/omarchy/default/hypr/windows.conf
 source = ~/.config/omarchy/current/theme/hyprland.conf
 
 # Change your own setup in these files (and overwrite any settings from defaults!)
