--- a/hypr/autostart.conf
+++ b/hypr/autostart.conf
@@ -1,8 +1,8 @@
 # Extra autostart processes
 # exec-once = uwsm-app -- my-service
-exec-once = uwsm-app -- hypridle  # @custom
-exec-once = uwsm-app -- mako  # @custom
-exec-once = uwsm-app -- waybar  # @custom
-exec-once = uwsm-app -- swaybg -i ~/.config/omarchy/current/background -m fill  # @custom
-exec-once = uwsm-app -- swayosd-server  # @custom
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1  # @custom
+exec-once = uwsm-app -- hypridle
+exec-once = uwsm-app -- mako
+exec-once = uwsm-app -- waybar
+exec-once = uwsm-app -- swaybg -i ~/.config/omarchy/current/background -m fill
+exec-once = uwsm-app -- swayosd-server
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
