--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,5 +1,5 @@
 general {
-    lock_cmd = hyprlock                                    # @custom
+    lock_cmd = hyprlock
     before_sleep_cmd = loginctl lock-session               # lock before suspend.
     after_sleep_cmd = hyprctl dispatch dpms on             # to avoid having to press a key twice to turn on the display.
     inhibit_sleep = 3                                      # wait until screen is locked
@@ -11,12 +11,17 @@ general {
 # }
 
 listener {
-    timeout = 300                      # @custom - 5min
+    timeout = 300                      # 5min
     on-timeout = loginctl lock-session # lock screen when timeout has passed
 }
 
 listener {
     timeout = 330                                            # 5.5min
     on-timeout = hyprctl dispatch dpms off                   # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on                     # @custom
+    on-resume = hyprctl dispatch dpms on
+}
+
+listener {
+    timeout = 600                                            # 10min
+    on-timeout = systemctl suspend                           # suspend system when timeout has passed
 }
