introduce cosmic applets

--- a/ghostty/arch.conf
+++ b/ghostty/arch.conf
@@ -1,7 +1,7 @@
 font-size = 14
 gtk-titlebar-style = tabs
+maximize=false
 # background-opacity = 0.90
-
 
 config-file = ~/.config/omarchy/current/theme/ghostty.conf
 
