--- a/ghostty/arch.conf
+++ b/ghostty/arch.conf
@@ -12,6 +12,16 @@ keybind = ctrl+v=paste_from_clipboard
 keybind = ctrl+t=new_tab
 keybind = ctrl+w=close_surface
 
+keybind = ctrl+one=goto_tab:1
+keybind = ctrl+two=goto_tab:2
+keybind = ctrl+three=goto_tab:3
+keybind = ctrl+four=goto_tab:4
+keybind = ctrl+five=goto_tab:5
+keybind = ctrl+six=goto_tab:6
+keybind = ctrl+seven=goto_tab:7
+keybind = ctrl+eight=goto_tab:8
+keybind = ctrl+nine=goto_tab:9
+
 keybind = super+c=text:\x03
 keybind = super+d=text:\x04
 keybind = super+r=text:\x12
