cosmic catpuccin theme switch dark/night

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "workbench.colorTheme": "Kanagawa",
+  "workbench.colorTheme": "Catppuccin Mocha",
 
   "editor.fontFamily": "Hack Nerd Font Mono",
   "editor.formatOnSave": true,
