Update shortcut keys to use function keys and adjust VSCode icon theme

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "workbench.colorTheme": "Catppuccin Mocha",
+  "workbench.iconTheme": "catppuccin-mocha",
 
   "editor.fontFamily": "Hack Nerd Font Mono",
   "editor.formatOnSave": true,
