rebound all terminal keycodes to super

--- a/ghostty/linux.conf
+++ b/ghostty/linux.conf
@@ -22,11 +22,36 @@ keybind = ctrl+seven=goto_tab:7
 keybind = ctrl+eight=goto_tab:8
 keybind = ctrl+nine=goto_tab:9
 
-keybind = super+c=text:\x03
-keybind = super+d=text:\x04
-keybind = super+r=text:\x12
-keybind = super+s=text:\x13
-keybind = super+u=text:\x15
-keybind = super+w=text:\x17
-keybind = super+l=text:\x0c
-keybind = super+z=text:\x1a
+# Control code bindings (Super+key sends Ctrl+key to apps)
+keybind = super+shift+2=text:\x00  # Ctrl+@: Shell: set mark | Vim: rarely used
+keybind = super+a=text:\x01  # Ctrl+A: Shell: beginning of line | Vim: increment number
+keybind = super+b=text:\x02  # Ctrl+B: Shell: back one char | Vim: page up
+keybind = super+c=text:\x03  # Ctrl+C: Interrupt/kill process
+keybind = super+d=text:\x04  # Ctrl+D: EOF/exit shell | Vim: scroll down half page
+keybind = super+e=text:\x05  # Ctrl+E: Shell: end of line | Vim: scroll view down one line
+keybind = super+f=text:\x06  # Ctrl+F: Shell: forward one char | Vim: page down
+keybind = super+g=text:\x07  # Ctrl+G: Shell: abort | Vim: show file info
+keybind = super+h=text:\x08  # Ctrl+H: Backspace (may differ from backspace key in some apps)
+keybind = super+i=text:\x09  # Ctrl+I: Tab (may differ from tab key in Vim plugins)
+keybind = super+j=text:\x0a  # Ctrl+J: Enter/line feed (may differ from enter key in Vim)
+keybind = super+k=text:\x0b  # Ctrl+K: Shell: kill to end of line | Vim: digraph
+keybind = super+l=text:\x0c  # Ctrl+L: Clear screen | Vim: redraw screen
+keybind = super+m=text:\x0d  # Ctrl+M: Enter/carriage return (may differ from enter in Vim)
+keybind = super+n=text:\x0e  # Ctrl+N: Shell: next history | Vim: next completion
+keybind = super+o=text:\x0f  # Ctrl+O: Shell: execute & show next | Vim: jump back in jump list
+keybind = super+p=text:\x10  # Ctrl+P: Shell: previous history | Vim: previous completion
+keybind = super+q=text:\x11  # Ctrl+Q: Resume terminal output (XON)
+keybind = super+r=text:\x12  # Ctrl+R: Shell: reverse search history | Vim: redo
+keybind = super+s=text:\x13  # Ctrl+S: Shell: stop output (XOFF) | Vim/LazyVim: save file
+keybind = super+t=text:\x14  # Ctrl+T: Shell: transpose chars | Vim: tag jump back
+keybind = super+u=text:\x15  # Ctrl+U: Shell: kill line before cursor | Vim: scroll up half page
+keybind = super+v=text:\x16  # Ctrl+V: Shell: literal next char | Vim: visual block mode
+keybind = super+w=text:\x17  # Ctrl+W: Shell: delete word backwards | Vim: window commands
+keybind = super+x=text:\x18  # Ctrl+X: Vim: decrement number under cursor
+keybind = super+y=text:\x19  # Ctrl+Y: Shell: yank/paste killed text | Vim: scroll view up one line
+keybind = super+z=text:\x1a  # Ctrl+Z: Suspend process (resume with 'fg')
+keybind = super+bracket_left=text:\x1b  # Ctrl+[: Escape (may differ from escape key in Vim)
+keybind = super+backslash=text:\x1c  # Ctrl+\: Quit signal (force quit, stronger than Ctrl+C)
+keybind = super+bracket_right=text:\x1d  # Ctrl+]: Telnet escape | Vim: tag jump forward
+keybind = super+shift+6=text:\x1e  # Ctrl+^: Vim: edit alternate file (rarely works via terminal)
+keybind = super+slash=text:\x1f  # Ctrl+_: Undo last edit (works in some shells/apps)
