--- a/hypr/bindings.conf
+++ b/hypr/bindings.conf
@@ -33,17 +33,17 @@ bindd = SUPER, 8, Switch to workspace 8, workspace, 8
 bindd = SUPER, 9, Switch to workspace 9, workspace, 9
 bindd = SUPER, 0, Switch to workspace 10, workspace, 10
 
-# Move active window to workspace with CTRL SHIFT + [1-9; 0]
-bindd = CTRL SHIFT, 1, Move to workspace 1, movetoworkspace, 1
-bindd = CTRL SHIFT, 2, Move to workspace 2, movetoworkspace, 2
-bindd = CTRL SHIFT, 3, Move to workspace 3, movetoworkspace, 3
-bindd = CTRL SHIFT, 4, Move to workspace 4, movetoworkspace, 4
-bindd = CTRL SHIFT, 5, Move to workspace 5, movetoworkspace, 5
-bindd = CTRL SHIFT, 6, Move to workspace 6, movetoworkspace, 6
-bindd = CTRL SHIFT, 7, Move to workspace 7, movetoworkspace, 7
-bindd = CTRL SHIFT, 8, Move to workspace 8, movetoworkspace, 8
-bindd = CTRL SHIFT, 9, Move to workspace 9, movetoworkspace, 9
-bindd = CTRL SHIFT, 0, Move to workspace 10, movetoworkspace, 10
+# Move active window to workspace with SHIFT + F[1-10]
+bindd = SHIFT, F1,  Move to workspace 1,  movetoworkspace, 1
+bindd = SHIFT, F2,  Move to workspace 2,  movetoworkspace, 2
+bindd = SHIFT, F3,  Move to workspace 3,  movetoworkspace, 3
+bindd = SHIFT, F4,  Move to workspace 4,  movetoworkspace, 4
+bindd = SHIFT, F5,  Move to workspace 5,  movetoworkspace, 5
+bindd = SHIFT, F6,  Move to workspace 6,  movetoworkspace, 6
+bindd = SHIFT, F7,  Move to workspace 7,  movetoworkspace, 7
+bindd = SHIFT, F8,  Move to workspace 8,  movetoworkspace, 8
+bindd = SHIFT, F9,  Move to workspace 9,  movetoworkspace, 9
+bindd = SHIFT, F10, Move to workspace 10, movetoworkspace, 10
 
 # Resize windows
 bindd = SUPER, code:20, Expand left, resizeactive, -100 0
