--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -1,27 +1,22 @@
 general {
     lock_cmd = hyprlock
-    before_sleep_cmd = loginctl lock-session               # lock before suspend.
-    after_sleep_cmd = hyprctl dispatch dpms on             # to avoid having to press a key twice to turn on the display.
-    inhibit_sleep = 3                                      # wait until screen is locked
-}
-
-# listener {
-#     timeout = 150                                             # 2.5min
-#     on-timeout = pidof hyprlock || omarchy-launch-screensaver # start screensaver (if we haven't locked already)
-# }
-
-listener {
-    timeout = 300                      # 5min
-    on-timeout = loginctl lock-session # lock screen when timeout has passed
+    before_sleep_cmd = loginctl lock-session
+    after_sleep_cmd = [ -n "$NIRI_SOCKET" ] && niri msg action power-on-monitors || hyprctl dispatch dpms on
+    inhibit_sleep = 3
 }
 
 listener {
-    timeout = 330                                            # 5.5min
-    on-timeout = hyprctl dispatch dpms off                   # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on
+    timeout = 300
+    on-timeout = loginctl lock-session
 }
 
 listener {
-    timeout = 600                                            # 10min
-    on-timeout = systemctl suspend                           # suspend system when timeout has passed
+    timeout = 330
+    on-timeout = [ -n "$NIRI_SOCKET" ] && niri msg action power-off-monitors || hyprctl dispatch dpms off
+    on-resume = [ -n "$NIRI_SOCKET" ] && niri msg action power-on-monitors || hyprctl dispatch dpms on
+}
+
+listener {
+    timeout = 600
+    on-timeout = systemctl suspend
 }
